--- a/index.html
+++ b/index.html
@@ -282,8 +282,7 @@
         <div class="container mx-auto px-4 xl:px-0 flex justify-between items-center">
             <div class="flex items-center">
                 <a href="#home" class="text-2xl font-bold flex items-center">
-                    <span class="bg-white text-primary px-3 py-1 rounded mr-2">ST</span>
-                    <span>Sprang Terras</span>
+                    <img src="img/stlogo.png" alt="Sprang Terras Logo" class="h-12 mr-2">
                 </a>
             </div>
             
