--- a/index.html
+++ b/index.html
@@ -281,8 +281,10 @@
     <nav class="navbar fixed w-full z-50 bg-primary/90 text-white py-4">
         <div class="container mx-auto px-4 xl:px-0 flex justify-between items-center">
             <div class="flex items-center">
-                <a href="#home" class="text-2xl font-bold flex items-center">
-                    <img src="img/stlogo.png" alt="Sprang Terras Logo" class="h-20 mr-2">
+                <a href="#home" class="flex items-center">
+                    <div class="bg-white p-2 rounded drop-shadow-lg">
+                        <img src="img/stlogo.png" alt="Sprang Terras" class="h-16">
+                    </div>
                 </a>
             </div>
             
